--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,10 +23,10 @@ figure { display: block; margin:0; }
 
 /* Abusing extended URLs:
  * query arguments can play the role of classes in HTML that are not available in MarkDown.
- * Be careful with the this "contains" condition:
+ * Be careful with the this "ends with" condition:
  * "?abc=right-hand" would also match: [src~="c=right"]
  */
-img[src~="align=right"] { float: right; margin-left:1em }
+img[src$="align=right"] { float: right; margin-left:1em }
 
 /* floating pictures */
 .break { clear: both; }
