simplifications with improved preview (#25)
* simplifications with improved preview

* relative URL's in .md requires root relative URL's in css

* selector

* selector just by the attribute

* properly link the custom style sheet

* attribute selector needs quotes for value

* wild idea: abusing URL components for css selectors

* moved align rule from page specific css to general css

* comment on the new rule to align images

* returning to ends-with condition

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,6 +21,13 @@ figure { display: block; margin:0; }
 /* border */
 .clpic, a img {border-style: solid; border-width: 1px; border-color: LightBlue;}
 
+/* Abusing extended URLs:
+ * query arguments can play the role of classes in HTML that are not available in MarkDown.
+ * Be careful with the this "ends with" condition:
+ * "?abc=right-hand" would also match: [src~="c=right"]
+ */
+img[src$="align=right"] { float: right; margin-left:1em }
+
 /* floating pictures */
 .break { clear: both; }
 
