--- a/_includes/wobble.html
+++ b/_includes/wobble.html
@@ -68,3 +68,10 @@
     }
     update()
 </script>
+
+ <p>
+        
+        <a id="roseButton" href="#val"><img src="../images_stitches/rose.png" class="clpic"></a>
+        <a id="ltrButton" href="#val"><img src="../images_stitches/bias-ltr.png" class="clpic"></a>
+        <a id="rtlButton" href="#val"><img src="../images_stitches/bias-rtl.png" class="clpic"></a>
+    </p>
