--- a/_includes/wobble.html
+++ b/_includes/wobble.html
@@ -1,19 +1,19 @@
 <form>
     <table>
         <tr>
-            <td><input name="topLeft" id="topLeft" type="text" onchange="update()" value="ct"></td>
-            <td><input name="top" id="top" type="text" onchange="update()" value="ctct"></td>
-            <td><input name="topRight" id="topRight" type="text" onchange="update()" value="ct"></td>
+            <td style="width:4.1em"><input name="topLeft" id="topLeft" type="text" onchange="update()" value="ct" style="width:4em"></td>
+            <td style="width:4.1em"><input name="top" id="top" type="text" onchange="update()" value="ctct" style="width:4em"></td>
+            <td style="width:4.1em"><input name="topRight" id="topRight" type="text" onchange="update()" value="ct" style="width:4em"></td>
         </tr>
         <tr>
-            <td><input name="left" id="left" type="text" onchange="update()" value="ct"></td>
-            <td><input name="center" id="center" type="text" onchange="update()" value="ct"></td>
-            <td><input name="right" id="right" type="text" onchange="update()" value="ct"></td>
+            <td style="width:4.1em"><input name="left" id="left" type="text" onchange="update()" value="ct" style="width:4em"></td>
+            <td style="width:4.1em"><input name="center" id="center" type="text" onchange="update()" value="ct" style="width:4em"></td>
+            <td style="width:4.1em"><input name="right" id="right" type="text" onchange="update()" value="ct" style="width:4em"></td>
         </tr>
         <tr>
-            <td><input name="bottomLeft" id="bottomLeft" type="text" onchange="update()" value="ctct"></td>
-            <td><input name="bottom" id="bottom" type="text" onchange="update()" value="ctct"></td>
-            <td><input name="bottomRight" id="bottomRight" type="text" onchange="update()" value="ctct"></td>
+            <td style="width:4.1em"><input name="bottomLeft" id="bottomLeft" type="text" onchange="update()" value="ctct" style="width:4em"></td>
+            <td style="width:4.1em"><input name="bottom" id="bottom" type="text" onchange="update()" value="ctct" style="width:4em"></td>
+            <td style="width:4.1em"><input name="bottomRight" id="bottomRight" type="text" onchange="update()" value="ctct" style="width:4em"></td>
         </tr>
     </table>
     <p>
