text for stitch cheat sheet together

--- a/_includes/stitches.html
+++ b/_includes/stitches.html
@@ -1,4 +1,3 @@
-Some less trivial stitches to copy-paste, drop or add twists at will.
 {% include gallery.html alt="" src="../images_stitches/crclct.png" caption="crclct<br>clcrct" %}
 {% include gallery.html alt="" src="../images_stitches/clcrclc.png" caption="clcrclc<br>crclcrc" %}
 {% include gallery.html alt="" src="../images_stitches/ctctc.png" caption="ctctc<br>&nbsp;" %}
@@ -7,6 +6,7 @@ Some less trivial stitches to copy-paste, drop or add twists at will.
 {% include gallery.html alt="" src="../images_stitches/ctcttctc.png" caption="ctcttctc<br>&nbsp;" %}
 {% include gallery.html alt="" src="../images_stitches/tctctllctctr.png" caption="tctctllctctr<br>tctctrrctctl" %}
 
+Above some less trivial stitches to copy-paste into a form, drop or add twists at will.
 Each second string is the mirrored version of the displayed stitch.
-Note that the last two images are two stitches with the edge pin left out,
-these siamese twins show up as one in the pair diagrams.
+Note that the last two images are two stitches each with a pin left out,
+these siamese twins show up as one stitch in the pair diagrams.
