form -> form-field

--- a/_includes/stitches.html
+++ b/_includes/stitches.html
@@ -6,7 +6,7 @@
 {% include gallery.html alt="" src="../images_stitches/ctcttctc.png" caption="ctcttctc<br>&nbsp;" %}
 {% include gallery.html alt="" src="../images_stitches/tctctllctctr.png" caption="tctctllctctr<br>tctctrrctctl" %}
 
-Above some less trivial stitches to copy-paste into a form, drop or add twists at will.
+Above some less trivial stitches to copy-paste into a form-field, drop or add twists at will.
 Each second string is the mirrored version of the displayed stitch.
 Note that the last two images are two stitches each with a pin left out,
 these siamese twins show up as one stitch in the pair diagrams.
