--- a/_includes/wobble.html
+++ b/_includes/wobble.html
@@ -1,35 +1,33 @@
 <form>
-    <table>
-        <tr>
-            <td><input name="topLeft" id="topLeft" type="text" onchange="update()" value="ct"></td>
-            <td><input name="top" id="top" type="text" onchange="update()" value="ctct"></td>
-            <td><input name="topRight" id="topRight" type="text" onchange="update()" value="ct"></td>
-        </tr>
-        <tr>
-            <td><input name="left" id="left" type="text" onchange="update()" value="ct"></td>
-            <td><input name="center" id="center" type="text" onchange="update()" value="ct"></td>
-            <td><input name="right" id="right" type="text" onchange="update()" value="ct"></td>
-        </tr>
-        <tr>
-            <td><input name="bottomLeft" id="bottomLeft" type="text" onchange="update()" value="ctct"></td>
-            <td><input name="bottom" id="bottom" type="text" onchange="update()" value="ctct"></td>
-            <td><input name="bottomRight" id="bottomRight" type="text" onchange="update()" value="ctct"></td>
-        </tr>
-    </table>
-    <p>
+    <p style="margin: 0">
+        <td><input name="topLeft" id="topLeft" type="text" onchange="update()" value="ct"></td>
+        <td><input name="top" id="top" type="text" onchange="update()" value="ctct"></td>
+        <td><input name="topRight" id="topRight" type="text" onchange="update()" value="ct"></td>
+    </p>
+    <p style="margin: 0">
+        <td><input name="left" id="left" type="text" onchange="update()" value="ct"></td>
+        <td><input name="center" id="center" type="text" onchange="update()" value="ct"></td>
+        <td><input name="right" id="right" type="text" onchange="update()" value="ct"></td>
+    </p>
+    <p style="margin: 0">
+        <td><input name="bottomLeft" id="bottomLeft" type="text" onchange="update()" value="ctct"></td>
+        <td><input name="bottom" id="bottom" type="text" onchange="update()" value="ctct"></td>
+        <td><input name="bottomRight" id="bottomRight" type="text" onchange="update()" value="ctct"></td>
+    </p>
+    <p style="margin-bottom: 0">
         connection:
         <input name="connection" id="conn" type="text" onchange="update()" value="ctct">
     </p>
-   
-    <p>
-        <a id="roseButton" href="#val"><img src="../images_stitches/rose.png" class="clpic"></a>
-        <a id="ltrButton" href="#val"><img src="../images_stitches/bias-ltr.png" class="clpic"></a>
-        <a id="rtlButton" href="#val"><img src="../images_stitches/bias-rtl.png" class="clpic"></a>
-    </p>
+</form>
 
-    </form>
+<p style="margin-top: 1em">
+    <a style="margin-right: 1em;" id="roseButton" href="#val"><img src="../images_stitches/rose.png" class="clpic"></a>
+    <a style="margin-right: 1em;" id="ltrButton" href="#val"><img src="../images_stitches/bias-ltr.png" class="clpic"></a>
+    <a style="margin-right: 1em;" id="rtlButton" href="#val"><img src="../images_stitches/bias-rtl.png" class="clpic"></a>
+</p>
 
-   <script>
+
+<script>
     function droste1(stitch){
         return `c1=${stitch}&b2=${stitch}&b1=ct&a1=ctll&g2=ctrr&c2=ct`
     }
@@ -60,4 +58,3 @@
     }
     update()
 </script>
-
