--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,7 +28,7 @@ figure { display: block; margin:0; }
  */
 img[src$="align=right"] { float: right; margin-left:1em }
 img[src$="align=left"] { float: left; margin-right:1em }
-img[src$="align=center"] { float: center }
+img[src$="align=center"] { text-align: center }
 
 /* floating pictures */
 .break { clear: both; }
