restore page lay-out
was overruled by class=clpic

--- a/_includes/flanders.html
+++ b/_includes/flanders.html
@@ -5,6 +5,7 @@
         ><img src="/MAE-gf/images_flanders/{{ include.src }}.JPG"
               width="220"
               height="220"
+              style="margin-right:0em"
         ></a>
    </div>
    <figcaption style="display: block">
