--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,7 @@
 figure { display: block; margin:0; }
 
 /* border */
-.clall, img {border-style: solid; border-width: 1px; border-color: Silver}
+.clall, img {border-style: solid; border-width: 1px; border-color: GhostWhite}
 .clpic, a img {border-style: solid; border-width: 1px; border-color: LightBlue; margin-right: 1em;}
 
 /* Abusing extended URLs:
