text above picts

--- a/_includes/stitches.html
+++ b/_includes/stitches.html
@@ -1,3 +1,8 @@
+Below some less trivial stitches to copy-paste into a form-field, drop or add twists at will.
+Each second string is the mirrored version of the displayed stitch.
+Note that the last two images are two stitches each with a pin left out,
+these siamese twins show up as one stitch in the pair diagrams.
+
 {% include gallery.html alt="" src="../images_stitches/crclct.png" caption="crclct<br>clcrct" %}
 {% include gallery.html alt="" src="../images_stitches/clcrclc.png" caption="clcrclc<br>crclcrc" %}
 {% include gallery.html alt="" src="../images_stitches/ctctc.png" caption="ctctc<br>&nbsp;" %}
@@ -5,8 +10,3 @@
 {% include gallery.html alt="" src="../images_stitches/ctclcrctc.png" caption="ctclcrctc<br>ctcrclctc" %}
 {% include gallery.html alt="" src="../images_stitches/ctcttctc.png" caption="ctcttctc<br>&nbsp;" %}
 {% include gallery.html alt="" src="../images_stitches/tctctllctctr.png" caption="tctctllctctr<br>tctctrrctctl" %}
-
-Above some less trivial stitches to copy-paste into a form-field, drop or add twists at will.
-Each second string is the mirrored version of the displayed stitch.
-Note that the last two images are two stitches each with a pin left out,
-these siamese twins show up as one stitch in the pair diagrams.
