--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,11 +6,11 @@
 /* stitches & elements */
 .stch {border: 1px solid #DBE7F3; background-color: #F2F8FC;}
 .elem {border: 1px solid #DBE7F3;}
-.b-grey {background-color: white; color: grey;} 
-.b-gree {background-color: white; color: lime;} 
-.b-purp {background-color: white; color: purple;} 
-.b-red  {background-color: white; color: red;} 
-.b-blue {background-color: white; color: blue;} 
+.b-grey {background-color: white; color: #808080;} 
+.b-gree {background-color: white; color: #00FF00;} 
+.b-purp {background-color: white; color: #800080;} 
+.b-red  {background-color: white; color: #FF0000;} 
+.b-blue {background-color: white; color: #0000FF;} 
 
 /* copied from Jo Pol */
 #sidebar hr { height: 12px; border: 0; box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.2); }
@@ -19,8 +19,8 @@
 figure { display: block; margin:0; }
 
 /* border */
-.clall, img {border-style: solid; border-width: 1px; border-color: #ebebeb}
-.clpic, a img {border-style: solid; border-width: 1px; border-color: LightBlue; margin-right: 1em;}
+.clall, img {border-style: solid; border-width: 1px; border-color: #EBEBEB}
+.clpic, a img {border-style: solid; border-width: 1px; border-color: #ADD8E6; margin-right: 1em;}
 
 /* Abusing extended URLs:
  * query arguments can play the role of classes in HTML that are not available in MarkDown.
