--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -14,7 +14,7 @@
 <a href="https://maetempels.github.io/MAE-gf/docs/spiders">Spiders</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/tria">Triangular Grounds</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/fish">Milanese Fish</a><br>
-<a href="https://maetempels.github.io/MAE-gf/docs/lotus">Milanese Lotus</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/lotus">Milanese Lotus and Lattice</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/misca">Miscellaneous examples</a><br>
 </p>
 
