--- a/_includes/wobble.html
+++ b/_includes/wobble.html
@@ -1,18 +1,18 @@
 <form>
     <p style="margin: 0">
-        <td><input name="topLeft" id="topLeft" type="text" onchange="update()" value="ct"></td>
-        <td><input name="top" id="top" type="text" onchange="update()" value="ctct"></td>
-        <td><input name="topRight" id="topRight" type="text" onchange="update()" value="ct"></td>
+        <input name="topLeft" id="topLeft" type="text" onchange="update()" value="ct" style="max-width: 30%">
+        <input name="top" id="top" type="text" onchange="update()" value="ctct" style="max-width: 30%">
+        <input name="topRight" id="topRight" type="text" onchange="update()" value="ct" style="max-width: 30%">
     </p>
     <p style="margin: 0">
-        <td><input name="left" id="left" type="text" onchange="update()" value="ct"></td>
-        <td><input name="center" id="center" type="text" onchange="update()" value="ct"></td>
-        <td><input name="right" id="right" type="text" onchange="update()" value="ct"></td>
+        <input name="left" id="left" type="text" onchange="update()" value="ct" style="max-width: 30%">
+        <input name="center" id="center" type="text" onchange="update()" value="ct" style="max-width: 30%">
+        <input name="right" id="right" type="text" onchange="update()" value="ct" style="max-width: 30%">
     </p>
     <p style="margin: 0">
-        <td><input name="bottomLeft" id="bottomLeft" type="text" onchange="update()" value="ctct"></td>
-        <td><input name="bottom" id="bottom" type="text" onchange="update()" value="ctct"></td>
-        <td><input name="bottomRight" id="bottomRight" type="text" onchange="update()" value="ctct"></td>
+        <input name="bottomLeft" id="bottomLeft" type="text" onchange="update()" value="ctct" style="max-width: 30%">
+        <input name="bottom" id="bottom" type="text" onchange="update()" value="ctct" style="max-width: 30%">
+        <input name="bottomRight" id="bottomRight" type="text" onchange="update()" value="ctct" style="max-width: 30%">
     </p>
     <p style="margin-bottom: 0">
         connection:
