--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,7 +34,7 @@ figure { display: block; margin:0; }
 img[src$="align=right"] { float: right; margin-left:1em }
 img[src$="align=left"] { float: left; margin-right:1em }
 img[src$="align=center"] { text-align: center }
-img[src$="x=knop"] {float: left; margin-right:1em; box-shadow: 3px 3px #ebebeb;}
+img[src$="x=button"] {box-shadow: 3px 3px #ebebeb;}
 
 /* floating pictures */
 .break { clear: both; }
