--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -3,7 +3,7 @@
 <h3>Start etc.</h3>
 <p>
 <a href="https://maetempels.github.io/MAE-gf/index">Start page</a><br>
-<a href="https://maetempels.github.io/MAE-gf/docs/tricks">Tips, Tricks &amp; Notes</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/tricks">Notes</a><br>
 </p>
 
 <h3>Examples</h3>
