--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -28,7 +28,7 @@
 <h3>Miscellaneous</h3> 
 <p>
 <a href="https://maetempels.github.io/MAE-gf/docs/about-us">About us &amp; Contact</a><br>
-<a href="https://maetempels.github.io/MAE-gf/docs/license">Copyright, license, references</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/license">Copyright, license, literature</a><br>
 <br>
 <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" />
 </p>
