--- a/_includes/p-l-c.html
+++ b/_includes/p-l-c.html
@@ -3,7 +3,7 @@
 <figure>
   <p style="text-align: center">
   <a href="{{ include.lnk }}">  
-  <img alt="{{ include.alt }}" src="{{ include.src }}" class="clpic" >
+  <img alt="{{ include.alt }}" src="{{ include.src }}"  title="{{ include.title }}" class="clpic" >
   </a>
   </p>
 </figure>
