--- a/_includes/picts-centr.html
+++ b/_includes/picts-centr.html
@@ -2,6 +2,6 @@
 
 <figure>
   <p style="text-align: center;">
-  <img alt="{{ include.alt }}" src="{{ include.src }}">
+  <img alt="{{ include.alt }}" src="{{ include.src }} title= "{{ include.title }}">
   </p>
 </figure>
