--- a/_includes/picts-centr.html
+++ b/_includes/picts-centr.html
@@ -2,7 +2,7 @@
 
 <figure>
   <p style="text-align: center;">
-  <img alt="{{ include.alt }}" src="{{ include.src }} title="{{ include.title }}">
+  <img alt="{{ include.alt }}" src="{{ include.src }}" title="{{ include.title }}">
   </p>
 </figure>
                                                                                  
