--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -41,11 +41,19 @@
 <p>
   <a href="https://d-bl.github.io/GroundForge/tiles">Main page</a><br>
   <a href="https://d-bl.github.io/GroundForge/help/">User guide</a><br>
-  
 </p>
 
 <p><hr></p>
 
+<h2>Catalogues></h2>
+<p>
+  <a href="https://d-bl.github.io/tesselace-to-gf">TesseLace</a><br>
+  <a href="https://d-bl.github.io/gw-lace-to-gf">Whiting></a><br>
+</p>
+
+<p><hr></p>
+
+  
 
   
 
