--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -45,10 +45,10 @@
 
 <p><hr></p>
 
-<h2>Catalogues></h2>
+<h2>Catalogues</h2>
 <p>
   <a href="https://d-bl.github.io/tesselace-to-gf">TesseLace</a><br>
-  <a href="https://d-bl.github.io/gw-lace-to-gf">Whiting></a><br>
+  <a href="https://d-bl.github.io/gw-lace-to-gf">Whiting</a><br>
 </p>
 
 <p><hr></p>
