--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -32,7 +32,7 @@
 <a href="https://maetempels.github.io/MAE-gf/docs/about-us">About us &amp; Contact</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/license">Copyright, license, literature</a><br>
 <br>
-<img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" />
+<img alt="Creative Commons: some rights reserved" style="border-width:0" src="/MAE-gf/assets/images/CC_some_rights_reserved.png" />
 </p>
 
 <p><hr></p>
