--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -30,9 +30,9 @@
 <h3>Miscellaneous</h3> 
 <p>
 <a href="https://maetempels.github.io/MAE-gf/docs/about-us">About us &amp; Contact</a><br>
-<a href="https://maetempels.github.io/MAE-gf/docs/license">Copyright, license, literature</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/literature">Contributors, literature</a><br>
 <br>
-<img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" />
+<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="assets/images/cc-by-80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 </p>
 
 <p><hr></p>
