/MAE-gf  appantently

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -2,35 +2,35 @@
 
 <h3>Start etc.</h3>
 <p>
-<a href="../index">Start page</a><br>
-<a href="../docs/tricks">Notes</a><br>
+<a href="../MAE-gf/index">Start page</a><br>
+<a href="../MAE-gf/docs/tricks">Notes</a><br>
 </p>
 
 <h3>Examples</h3>
 <p>
-<a href="../docs/nets">Net Grounds</a><br>
-<a href="../docs/roses">Rose Grounds</a><br>
-<a href="../docs/bias">Bias Grounds</a><br>
-<a href="../docs/paris">Paris Grounds</a><br>
-<a href="../docs/snowflakes">Snowflakes</a><br>
-<a href="../docs/spiders">Spiders</a><br>
-<a href="../docs/tria">Triangular Grounds</a><br>
-<a href="../docs/fish">Fish</a><br>
-<a href="../docs/lotus">Lotus and Lattice</a><br>
-<a href="../docs/misca">Miscellaneous examples</a><br>
+<a href="../MAE-gf/docs/nets">Net Grounds</a><br>
+<a href="../MAE-gf/docs/roses">Rose Grounds</a><br>
+<a href="../MAE-gf/docs/bias">Bias Grounds</a><br>
+<a href="../MAE-gf/docs/paris">Paris Grounds</a><br>
+<a href="../MAE-gf/docs/snowflakes">Snowflakes</a><br>
+<a href="../MAE-gf/docs/spiders">Spiders</a><br>
+<a href="../MAE-gf/docs/tria">Triangular Grounds</a><br>
+<a href="../MAE-gf/docs/fish">Fish</a><br>
+<a href="../MAE-gf/docs/lotus">Lotus and Lattice</a><br>
+<a href="../MAE-gf/docs/misca">Miscellaneous examples</a><br>
 </p>
 
 <h3>Own examples</h3>
 <p>  
-<a href="../docs/marian">Grounds by Marian</a><br>
-<a href="../docs/flanders">Flanders grounds by &apos;t Groene Hart</a><br>
-<a href="../docs/droste">Droste</a><br>
+<a href="../MAE-gf/docs/marian">Grounds by Marian</a><br>
+<a href="../MAE-gf/docs/flanders">Flanders grounds by &apos;t Groene Hart</a><br>
+<a href="../MAE-gf/docs/droste">Droste</a><br>
 </p>
 
 <h3>Miscellaneous</h3> 
 <p>
-<a href="../docs/about-us">About us &amp; Contact</a><br>
-<a href="../docs/literature">Contributors, literature</a><br>
+<a href="../MAE-gf/docs/about-us">About us &amp; Contact</a><br>
+<a href="../MAE-gf/docs/literature">Contributors, literature</a><br>
 <br>
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="/MAE-gf/assets/images/CC-BY-80x15.png"></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 
