--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -3,7 +3,7 @@
 <h3>Start etc.</h3>
 <p>
 <a href="../index">Start page</a><br>
-<a href="../docs/tricks">Notes</a><br>
+<a href="../MAE-GF/docs/tricks">Notes</a><br>
 </p>
 
 <h3>Examples</h3>
