--- a/_includes/flanders.html
+++ b/_includes/flanders.html
@@ -13,7 +13,7 @@
           target="_blank"
        >zoom in</a>
        -
-       <a href="https://d-bl.github.io/GroundForge/tiles?patchWidth=11&patchHeight=11&c1={{ include.d1 }}&d1={{ include.a1 }}&e1={{ include.b1 }}&c2={{ include.d2 }}&e2={{ include.b2 }}&d3={{ include.c1 }}&shiftColsSE=2&shiftRowsSE=2&shiftColsSW=-2&shiftRowsSW=2&footside=-5,B-,-2,b-,,&tile=831,4-7,-5-&headside=5-,-c,6-,-c"
+       <a href="/GroundForge/tiles?patchWidth=11&patchHeight=11&c1={{ include.d1 }}&d1={{ include.a1 }}&e1={{ include.b1 }}&c2={{ include.d2 }}&e2={{ include.b2 }}&d3={{ include.c1 }}&shiftColsSE=2&shiftRowsSE=2&shiftColsSW=-2&shiftRowsSW=2&footside=-5,B-,-2,b-,,&tile=831,4-7,-5-&headside=5-,-c,6-,-c"
           target="_blank"
        >diagrams</a>
        <br>
