cleaning up pictures

--- a/_includes/wobble.html
+++ b/_includes/wobble.html
@@ -21,9 +21,9 @@
 </form>
 
 <p style="margin-top: 1em">
-    <a id="roseButton" href="#val"><img src="../images_stitches/rose.png" class="clpic"></a>
-    <a id="ltrButton" href="#val"><img src="../images_stitches/bias-ltr.png" class="clpic"></a>
-    <a id="rtlButton" href="#val"><img src="../images_stitches/bias-rtl.png" class="clpic"></a>
+    <a id="roseButton" href="#val"><img src="/MAE/images/droste/rose.png" class="clpic"></a>
+    <a id="ltrButton" href="#val"><img src="/MAE/images/droste/bias-ltr.png" class="clpic"></a>
+    <a id="rtlButton" href="#val"><img src="/MAE/images/droste/bias-rtl.png" class="clpic"></a>
 </p>
 
 
