new location of help pages
(cherry picked from commit 1e177c70e44bee37c6266beb183ca22a19eebdff)

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -41,7 +41,7 @@
 <h2>Groundforge</h2>
 <p>
   <a href="/GroundForge/tiles">Main page</a><br>
-  <a href="/GroundForge/help/">User guide</a><br>
+  <a href="/GroundForge-help/">User guide</a><br>
 </p>
 
 <p><hr></p>
