--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,8 +10,8 @@ header a.button { background-color: #2e7bcf; }
 /* stitches & elements */
 .stch {border: 1px solid #DBE7F3; background-color: #F2F8FC;}
 .elem {border: 1px solid #DBE7F3;}
-.b-grey {background-color: white; color: #808080;} 
-.b-gree {background-color: white; color: #00FF00;} 
+.b-grey {background-color: white; color: #808080;}
+.b-gree {background-color: white; color: #008000;} 
 .b-purp {background-color: white; color: #800080;} 
 .b-red  {background-color: white; color: #FF0000;} 
 .b-blue {background-color: white; color: #0000FF;} 
