--- a/_includes/flanders.html
+++ b/_includes/flanders.html
@@ -26,6 +26,6 @@
            <tr><td>{{ include.d2 }}</td><td>&bull;</td><td>{{ include.b2 }}</td></tr>
            <tr><td>{{ include.b1 }}</td><td>{{ include.c1 }}</td><td>{{ include.d1 }}</td></tr>
        </table>
-       <a href="/MAE-gf/images/flanders2/{{ include.src }}.png"</a>
+       <a href="/MAE-gf/images/flanders2/{{ include.src }}.png"></a> 
    </figcaption>
 </figure>
