--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,7 @@ header a.button { background-color: #2e7bcf; }
 .b-red  {color: #FF0000; font-weight: bold;} 
 .b-blue {color: #0000FF; font-weight: bold;} 
 .b-blck {color: #000000; font-weight: bold;} 
+.b-orng {color: #FF6600; font-weight: bold:}
 
 /* copied from Jo Pol */
 #sidebar hr { height: 12px; border: 0; box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.2); }
