--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,7 @@ header a.button { background-color: #2e7bcf; }
 /* stitches & elements */
 .stch {border: 1px solid #DBE7F3; background-color: #F2F8FC;}
 .elem {border: 1px solid #DBE7F3;}
+.b-whit {color: #FFFFFF; font-weight: bold;}
 .b-grey {color: #808080; font-weight: bold;}
 .b-gree {color: #008000; font-weight: bold;} 
 .b-purp {color: #800080; font-weight: bold;} 
@@ -17,6 +18,7 @@ header a.button { background-color: #2e7bcf; }
 .b-blue {color: #0000FF; font-weight: bold;} 
 .b-blck {color: #000000; font-weight: bold;} 
 .b-orng {color: #FF6600; font-weight: bold;}
+.b-yell {color: #FFFF00; font-weight: bold;}
 
 /* copied from Jo Pol */
 #sidebar hr { height: 12px; border: 0; box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.2); }
