--- a/_includes/ctr.html
+++ b/_includes/ctr.html
@@ -6,3 +6,7 @@
 
        <a href="/GroundForge/tiles?patchWidth=12&patchHeight=12&a1={{ include.a2 }}&a2={{ include.a1 }}&tile=8,1&shiftColsSW=0&shiftRowsSW=2&shiftColsSE=1&shiftRowsSE=2">{{ include.txt-h2 }}</a>
 
+{% if include.a1 == include a2 %}
+ja
+{% endif %}
+
