--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -23,7 +23,8 @@
     </td>
     <td>
         {% if include.photo %}
-        <a href="<img src="../images/ctrl/{{ include.photo }}.jpg" target="_blank> img src="../images/ctrl/{{ include.photo }}.jpg width=200px height=100px></a>
+        <a href="../images/ctrl/{{ include.photo }}.jpg" target="_blank> 
+        img src="../images/ctrl/{{ include.photo }}.jpg width=200px height=100px></a>
     </td>
  </tr>
  
