--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -17,14 +17,15 @@
 
         {% if include.s1 != include.s2 %}
             <br>
-            <a href="/GroundForge/tiles?patchWidth=12&patchHeight=12&a1={{ include.s2 }}&a2={{ include.s1 }}&tile=8,1&shiftColsSW=0&shiftRowsSW=2&shiftColsSE=1&shiftRowsSE=2"
-                target="_blank">horizontal reverse</a>
+            [horizontal reverse]({% link "/GroundForge/tiles?patchWidth=12&patchHeight=12&a1={{ include.s2 }}&a2={{ include.s1 }}&tile=8,1&shiftColsSW=0&shiftRowsSW=2&shiftColsSE=1&shiftRowsSE=2 
+                 )%}
         {% endif %}
     </td>
     <td>
-        {% if include.photo %}
-        <a href="../images/ctrl/{{ include.photo }}.jpg" target="_blank> 
-        img src="../images/ctrl/{{ include.photo }}.jpg width=200px height=100px></a>
+        
+          <a href="../images/ctrl/{{ include.photo }}.jpg" target="_blank> 
+          img src="../images/ctrl/{{ include.photo }}.jpg width=200px height=100px></a>
+   
     </td>
  </tr>
  
