--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -3,7 +3,7 @@
 <tr>
     <td>
        {% if include.name %}
-            {{ include.name }},
+            {{ include.name }}
             <br>
        {% endif %}
        s1
@@ -14,7 +14,10 @@
         <br>
         <a href="/GroundForge/tiles?patchWidth=12&patchHeight=12&a1={{ include.s1 }}&a2={{ include.s2 }}&tile=8,1&shiftColsSW=0&shiftRowsSW=2&shiftColsSE=1&shiftRowsSE=2"
             target="_blank">horizontal</a>    
-
+        {% if include.s1 != include.s2 %}
+            <br>
+            een test
+        {% endif %}
         
     </td>
     
