--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -16,7 +16,7 @@
             target="_blank">horizontal</a>    
         {% if include.s1 != include.s2 %}
             <br>
-            [horizontal reverse]({% link "/GroundForge/tiles?patchWidth=12&patchHeight=12&a1={{ include.s2 }}&a2={{ include.s1 }}&tile=8,1&shiftColsSW=0&shiftRowsSW=2&shiftColsSE=1&shiftRowsSE=2 
+            [horizontal reverse]({% link /GroundForge/tiles?patchWidth=12&patchHeight=12&a1={{ include.s2 }}&a2={{ include.s1 }}&tile=8,1&shiftColsSW=0&shiftRowsSW=2&shiftColsSE=1&shiftRowsSE=2 
                  %})
         {% endif %}
         
