--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -22,7 +22,8 @@
     </td>
     <td>
         {% if include.photo %}
-            plaatje
+           <a href="../images/ctrl/{{ include.photo }}.jpg" target="_blank> 
+          img src="../images/ctrl/{{ include.photo }}.jpg width=200px height=100px></a>
         {% endif %}
     </td>
  </tr>
