--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -18,6 +18,8 @@
             <br>
             <a href="/GroundForge/tiles?patchWidth=12&patchHeight=12&a1={{ include.s2 }}&a2={{ include.s1 }}&tile=8,1&shiftColsSW=0&shiftRowsSW=2&shiftColsSE=1&shiftRowsSE=2"
             target="_blank">horizontal reversed</a>
+            [horizontal-reversed]({% link /GroundForge/tiles?patchWidth=12&patchHeight=12&a1={{ include.s2 }}&a2={{ include.s1 }}&tile=8,1&shiftColsSW=0&shiftRowsSW=2&shiftColsSE=1&shiftRowsSE=2 
+                                  %})
         {% endif %}
     </td>
     <td>
