--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -22,8 +22,8 @@
     </td>
     <td>
         {% if include.photo %}
-           <a href="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" target="_blank>link</a>
-           <img src="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" width=200px height=100px>
+           <a href="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" target="_blank>
+                                                                         <img src="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" width=200px height=100px></a>
         {% endif %}
     </td>
  </tr>
