--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -22,7 +22,7 @@
     </td>
     <td>
     
-           <a href="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" target="_blank>
+           <a href="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" target="_blank">
                                                                          <img src="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" width=200px height=100px></a>
        
     </td>
