--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -6,7 +6,7 @@
             {{ include.name }}
             <br>
        {% endif %}
-       s1
+       {{ include.s1 }}
     </td>
     <td>
         <a href="/GroundForge/tiles?patchWidth=12&patchHeight=12&a1={{ include.s1 }}&tile=5-&shiftColsSW=-1&shiftRowsSW=1&shiftColsSE=1&shiftRowsSE=1" 
