--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -25,6 +25,11 @@
            <a href="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" target="_blank">
                                                                          <img src="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" width=200px height=100px></a>
        {% endif %}
+        
+       {% if include.comm %}
+          {{ include.comm }}
+       {% endif %}
+           
     </td>
  </tr>
  
