calling page renamed

--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -1,4 +1,4 @@
-<!-- links to GF, diagonal and horizontal nets. Called from page ctrl --> 
+<!-- links to GF, diagonal and horizontal nets. Called from page stitches --> 
 
 <tr>
     <td>
