--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -3,7 +3,7 @@
 <tr>
     <td>
        {% if include.name %}
-            {{ include.name }}
+        <i>{{ include.name }}</i>
             <br>
        {% endif %}
        {{ include.s1 }}
