--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -9,16 +9,7 @@
        {{ include.s1 }}
     </td>
     <td>
-        <a href="/GroundForge/tiles?patchWidth=12&patchHeight=12&a1={{ include.s1 }}&tile=5-&shiftColsSW=-1&shiftRowsSW=1&shiftColsSE=1&shiftRowsSE=1" 
-           target="_blank">diagonal</a> 
-        <br>
-        <a href="/GroundForge/tiles?patchWidth=12&patchHeight=12&a1={{ include.s1 }}&a2={{ include.s2 }}&tile=8,1&shiftColsSW=0&shiftRowsSW=2&shiftColsSE=1&shiftRowsSE=2"
-            target="_blank">horizontal</a>    
-        {% if include.s1 != include.s2 %}
-            <br>
-            <a href="/GroundForge/tiles?patchWidth=12&patchHeight=12&a1={{ include.s2 }}&a2={{ include.s1 }}&tile=8,1&shiftColsSW=0&shiftRowsSW=2&shiftColsSE=1&shiftRowsSE=2"
-            target="_blank">-reversed</a>
-         {% endif %}
+        <a href="/GroundForge/nets?b={{ include.s1 }}" target="_blank"> {{ include.s1 }}</a>
     </td>
     <td>
         {% if include.photo %}
