--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -2,16 +2,14 @@
 
 <tr>
     <td>
-       {% if include.name %}
-        <i>{{ include.name }}</i>
-            <br>
-       {% endif %}
-       {{ include.s1 }}
-    </td>
-    <td>
         <a href="/GroundForge/nets?b={{ include.s1 }}" target="_blank"> {{ include.s1 }}</a>
     </td>
     <td>
+       {% if include.name %}
+         {{ include.name }}
+       {% endif %}
+    </td>
+       <td>
         {% if include.photo %}
            <a href="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" target="_blank">
                                                                          <img src="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" width=200px height=100px></a>
