--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -1,4 +1,4 @@
-<!-- links to GF, diagonal and horizontal nets. Called from page stitches --> 
+<!-- links to GroundForge: nets. Called from page stitches --> 
 
 <tr>
     <td>
@@ -9,16 +9,16 @@
          {{ include.name }}
        {% endif %}
     </td>
-       <td>
+    <td>
         {% if include.photo %}
            <a href="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" target="_blank">
                                                                          <img src="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" width=200px height=100px></a>
        {% endif %}
-        
+    </td>
+    <td>
        {% if include.comm %}
           {{ include.comm }}
        {% endif %}
-           
     </td>
  </tr>
  
