--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -14,6 +14,11 @@
            <a href="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" target="_blank">
                                                                          <img src="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" width=200px height=100px></a>
        {% endif %}
+        
+       {% if include.photo and include.comm %}
+         <br>
+       {% endif %}
+        
        {% if include.comm %}
           {{ include.comm }}
        {% endif %}
