--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -1,7 +1,7 @@
 <!-- links to GroundForge: nets. Called from page stitches --> 
 
 <tr>
-    <td>
+    <td style="text-align:center">
         <a href="/GroundForge/nets?b={{ include.s1 }}" target="_blank"> {{ include.s1 }}</a>
     </td>
     <td>
