--- a/_includes/ctrl.html
+++ b/_includes/ctrl.html
@@ -4,12 +4,12 @@
     <td style="text-align:center">
         <a href="/GroundForge/nets?b={{ include.s1 }}" target="_blank"> {{ include.s1 }}</a>
     </td>
-    <td style="text-align:left">
+    <td style="text-align:left; padding:5px">
        {% if include.name %}
          {{ include.name }}
        {% endif %}
     </td>
-    <td style="text-align:left">
+    <td style="text-align:left; padding:5px">
         {% if include.photo %}
            <a href="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" target="_blank">
                                                                          <img src="/MAE-gf/images/ctrl/{{ include.photo }}.jpg" width=200px height=100px></a>
