--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -4,6 +4,7 @@
 <p>
 <a href="/MAE-gf/index">Start page</a><br>
 <a href="/MAE-gf/docs/tricks">Notes</a><br>
+<a href="/MAE-gf/docs/stitches">Catalogue of stitches</a><br>  
 <br>
 <a href="/MAE-gf/docs/tricks#stitches"><img title="colors used" src="/MAE-gf/images/w-color.png"></a><br>
 </p>
