--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,4 +43,8 @@ img[src$="x=button"] {box-shadow: 3px 3px #ebebeb;}
 /* floating pictures */
 .break { clear: both; }
 
+/* tables in stitches.md and counting.md */
+.cctt td,th {text-align:left; padding:5px}
+
+
 
