--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -44,7 +44,9 @@ img[src$="x=button"] {box-shadow: 3px 3px #ebebeb;}
 .break { clear: both; }
 
 /* tables in stitches.md and counting.md */
-.cctt td,th {text-align:left; padding:5px}
+/*.cctt td,th {text-align:left; padding:5px}*/
+.cctt td {text-align:left; padding:5px}
+.cctt th {text-align:right; padding:5px}
 
 
 
