--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,7 +46,7 @@ img[src$="x=button"] {box-shadow: 3px 3px #ebebeb;}
 /* tables in stitches.md and counting.md */
 /*.cctt td,th {text-align:left; padding:5px}*/
 .cctt td {text-align:left; padding:5px}
-.cctt th {text-align:right; padding:5px}
+.cctt th {text-align:center; padding:5px}
 
 
 
