--- a/_includes/cctt.html
+++ b/_includes/cctt.html
@@ -1,3 +1,3 @@
 <!-- Called from page stitches --> 
 
-<tr><td colspan="3"><strong> {{ include.subheader }} </strong></td></tr>
+<tr><td colspan="3"> {{ include.subheader }} </td></tr>
