added nets page

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -45,6 +45,7 @@
 <p>
   <a href="/GroundForge/tiles">Main page</a><br>
   <a href="/GroundForge-help/">User guide</a><br>
+  <a href="/GroundForge/nets">Nets page</a><br> 
 </p>
 
 <p><hr></p>
