--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -1,4 +1,29 @@
-<h2>MENU</h2>
+<h2>Contact</h2>
+
+<a href="https://groups.io/g/GroundForge" target="_blank">user group</a>
+<a href="https://groundforge.wordpress.com">support</a>
+<a href="/MAE-gf/docs/about-us">About us</a><br>
+
+<p><hr></p>
+
+<h2>Catalogues</h2>
+<p>
+  <a href="/tesselace-to-gf">TesseLace</a><br>
+  <a href="/gw-lace-to-gf">Whiting</a><br>
+</p>
+
+<p><hr></p>
+
+<h2>Groundforge</h2>
+<p>
+  <a href="/GroundForge/tiles">Main page</a><br>
+  <a href="/GroundForge/">User guide</a><br>
+  <a href="/GroundForge/nets">Nets page</a><br> 
+</p>
+
+<p><hr></p>
+
+<h2>Many attractive examples</h2>
 
 <h3>Start etc.</h3>
 <p>
@@ -24,39 +49,19 @@
 <a href="/MAE-gf/docs/misca">Miscellaneous examples</a><br>
 </p>
 
-<h3>Own examples</h3>
+<h3>Specials</h3>
 <p>  
 <a href="/MAE-gf/docs/marian">Grounds by Marian</a><br>
 <a href="/MAE-gf/docs/flanders">Flanders grounds by &apos;t Groene Hart</a><br>
 <a href="/MAE-gf/docs/droste">Droste</a><br>
 </p>
 
-<h3>Miscellaneous</h3> 
+<p><hr></p>
+
 <p>
-<a href="/MAE-gf/docs/about-us">About us &amp; Contact</a><br>
-<a href="/MAE-gf/docs/literature">Contributors, literature</a><br>
-<br>
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="/MAE-gf/assets/images/CC-BY-80x15.png"></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
-
 </p>
-
-<p><hr></p>
-
-<h2>Groundforge</h2>
-<p>
-  <a href="/GroundForge/tiles">Main page</a><br>
-  <a href="/GroundForge/">User guide</a><br>
-  <a href="/GroundForge/nets">Nets page</a><br> 
-</p>
-
-<p><hr></p>
-
-<h2>Catalogues</h2>
-<p>
-  <a href="/tesselace-to-gf">TesseLace</a><br>
-  <a href="/gw-lace-to-gf">Whiting</a><br>
-</p>
-
+  
 <p><hr></p>
 
   
