--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -32,7 +32,7 @@
 <a href="/MAE-gf/docs/stitches">Catalogue of stitches</a><br>   
 <a href="https://d-bl.github.io/MAE-gf/docs/counting">Listing and counting stitches</a><br>
 <br>
-<a href="/MAE-gf/docs/tricks#stitches"><img title="colors used" src="/MAE-gf/images/w-color.png"></a><br>
+<a href="/MAE-gf/docs/tricks#color-code"><img title="colors used" src="/MAE-gf/images/w-color.png"></a><br>
 </p>
 
 <h3>Examples</h3>
