--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -1,7 +1,7 @@
 <h2>Contact</h2>
 
-<a href="https://groups.io/g/GroundForge" target="_blank">user group</a>
-<a href="https://groundforge.wordpress.com">support</a>
+<a href="https://groups.io/g/GroundForge" target="_blank">user group</a><br>
+<a href="https://groundforge.wordpress.com">support</a><br>
 <a href="/MAE-gf/docs/about-us">About us</a><br>
 
 <p><hr></p>
