--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -8,8 +8,8 @@
 
 <h2>Catalogues</h2>
 <p>
-  <a href="/tesselace-to-gf">TesseLace</a><br>
-  <a href="/gw-lace-to-gf">Whiting</a><br>
+  <a href="/tesselace-to-gf/">TesseLace</a><br>
+  <a href="/gw-lace-to-gf/">Whiting</a><br>
 </p>
 
 <p><hr></p>
@@ -59,7 +59,7 @@
 <p><hr></p>
 
 <p>
-<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="/MAE-gf/assets/images/CC-BY-80x15.png"></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+<a rel="license" href="https://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="/MAE-gf/assets/images/CC-BY-80x15.png"></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 </p>
   
 <p><hr></p>
