literature page restored

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -10,6 +10,8 @@
 <p>
   <a href="/tesselace-to-gf/">TesseLace</a><br>
   <a href="/gw-lace-to-gf/">Whiting</a><br>
+  Many attractive examples<br>
+  <a href="/MAE-gf/docs/literature">Literature</a><br>
 </p>
 
 <p><hr></p>
