--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -1,10 +1,9 @@
 <h2>Contact</h2>
 
 <a href="https://groups.io/g/GroundForge" target="_blank">User group</a><br>
-<a href="https://groundforge.wordpress.com">Support</a><br>
+<a href="https://groundforge.wordpress.com" target="_blank">Support</a><br>
 <a href="/MAE-gf/docs/about-us">About us</a><br>
-
-<p><hr></p>
+<!-- adress about us needs to be moved -->
 
 <h2>Catalogues</h2>
 <p>
@@ -13,8 +12,6 @@
   Many attractive examples<br>
   <a href="/MAE-gf/docs/literature">Literature</a><br>
 </p>
-
-<p><hr></p>
 
 <h2>Groundforge</h2>
 <p>
@@ -65,9 +62,4 @@
 </p>
   
 <p><hr></p>
-
-  
-
-  
-
 
