--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,7 +22,7 @@ header a.button { background-color: #2e7bcf; }
 
 /* copied from Jo Pol */
 #sidebar hr { height: 12px; border: 0; box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.2); }
-#sidebar h2, h3 { margin-bottom: 0; margin-top: 3px; } 
+#sidebar h2, h3 { margin-bottom: 1px; margin-top: 3px; } 
 
 /* pictures */
 figure { display: block; margin:0; }
